<resources>
    <string name="app_name">DDUBUCK</string>
    <string name="app_content_path">Pictures/DDUBUCK</string>
    <string name="title_home">홈</string>
    <string name="title_challenge">챌린지</string>
    <string name="title_badge">뱃지</string>
    <string name="title_mypage">마이페이지</string>
    <string name="OAUTH_CLIENT_ID">cVwJ_JBlpnXoSDM8dYx8</string>
    <string name="OAUTH_CLIENT_SECRET">RKXEAyv9NB</string>
    <string name="OAUTH_CLIENT_NAME">뚜벅뚜벅</string>
    <string name="firebase_web_client_id">1028661272148-epq7388qm5fg2lfdf7gmpmk59kid70td.apps.googleusercontent.com</string>
    <string name="OPEN_WEATHER_MAP_KEY">466c10bee7b689ae03ea8c7729ba0b1f</string>
    <string name="WEATHER_BASE_URL">http://api.openweathermap.org/</string>
    <string name="DUST_API_KEY">WUS%2FHlSHsC8A%2FVZZlz1%2F%2F4eSJiXcoh5gfR2EsoqdYGjhybgzun09KJKWZz%2BslJ85LzMZIIahT9UgeveNhce%2Fyw%3D%3D</string>
    <string name="birthdayInputTitle">생년월일 입력</string>
    <string name="inputLaterButtonText"><u>나중에 입력하기</u></string>
    <string name="next_time_alert_message">추가 정보를 입력하지 않으면 서비스 이용에 제한이 있을 수 있습니다.</string>
    <string name="body_info_text">칼로리 계산을 위해 키, 몸무게를 입력해주세요.</string>
    <string name="more_info_end_button">추가정보 입력완료</string>

    <string name="work_time">산책 시간</string>
    <string name="course_clear">코스 완주</string>
    <string name="calores">칼로리</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="time_title_name"> 김달려님, 잘하셨어요! </string>
    <string name="time_title_walk"> 완료한 나의 산책시간을 확인하세요. </string>
    <string name="time_mini_title"> 오늘의 산책시간은 </string>
    <string name="time1_mini_title">  분 입니다.</string>
    <string name="time_bottom_title"> 마지막 업데이트 4/9 오후 14:39</string>
    <string name="time_bottom_title_day"> </string>
    <string name="time_bottom_title_time"> </string>

    <string name="course_title"> 김달려님, 좋아요! </string>
    <string name="course_title_number"> 코스완주 횟수를 확인하세요.</string>
    <string name="course_mini_title">오늘도 코스를 1회 완료했어요! </string>
    <string name="course_bottom_title">마지막 업데이트 4/2 오후 14:39</string>

    <string name="calories_title"> 김달려님, 최고에요! </string>
    <string name="calories_confirm"> 소모된 칼로리를 확인하세요.</string>
    <string name="calories_mini_title"> 오늘 벌써 144kcal나 소모했어요! </string>
    <string name="calories_update"> 마지막 업데이트 4/2 오후 14:49 </string>


</resources>