<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.mypage.mywalk.CaloriesFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:text="@string/calories_title"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:text="@string/calories_confirm"/>

    <TextView
        android:id="@+id/minititle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="30dp"
        android:textSize="14dp"
        android:text="@string/calories_mini_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/calories_bar_chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calories_update"
        android:textSize="12dp"
        android:gravity="center"/>

</LinearLayout>